@@ -59,6 +59,7 @@ public:
   void parse_args(long &i, char **av);
   // Parse args that affect the backend.
 
+#if ACE_MAJOR_VERSION < 6 && ACE_MINOR_VERSION < 8
   void prep_be_arg(char *s);
   // Special BE arg call factored out of DRV_args.
 
@@ -70,6 +71,7 @@ public:
 
   AST_Generator *generator_init();
   // Create an AST node generator.
+#endif
 
   void open_streams(const char *filename);
   void close_streams();
